--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -19,7 +19,8 @@
 			<h1 id="title" class="mui-title"></h1>
 			<a id="publish" class="mui-icon mui-pull-right mui-plus-visible" style="padding-left: 30px;padding-top: 15px;font-size: 16px;">发布</a>
 		</header>
-		<div class="mui-content">
+		<div class="mui-scroll-wrapper mui-content">
+				<div class="mui-scroll">
 			<div class="input-content">
 				<textarea id="input-content" placeholder="这一刻的想法"></textarea>
 				<div id="take_pic" class="take_pic">
@@ -47,6 +48,7 @@
 				</div>
 			</div>
 			<div id="pictures" style="float: left;background-color: transparent;width: 320px;"></div>
+		</div>
 		</div>
 
 	</body>
