--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -8,21 +8,26 @@
 		<link rel="stylesheet" type="text/css" href="../../css/mui.min.css" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<style>
-			.mui-input-group:before{
+			.mui-input-group:before {
 				background-color: #fff;
 			}
-			.mui-input-group:after{
+			
+			.mui-input-group:after {
 				background-color: #fff;
 			}
-			.row1:after{
+			
+			.row1:after {
 				background-color: #E4E4E4;
 			}
-			.row2:after{
+			
+			.row2:after {
 				background-color: #E4E4E4;
 			}
-			.row3:after{
+			
+			.row3:after {
 				background-color: #E4E4E4;
 			}
+			
 			.mui-btn {
 				padding: 10px;
 			}
@@ -85,7 +90,7 @@
 			mui.plusReady(function() {
 				var tempFlag = 0; //0我普通，1为设置修改密码，2为注册后设置密码，3为退出登录时设置密码
 				//获取当前页面
-				var curPage = plus.webview.currentWebview();
+//				var curPage = plus.webview.currentWebview();
 				var oldPassword = document.getElementById('old-password');
 				var navTitle = document.getElementById('navTitle');
 				var back = document.getElementById('back');
@@ -97,51 +102,10 @@
 				var password0div = document.getElementById("password000"); //新密码
 				var password1div = document.getElementById("password111"); //确认密码
 				var modifypasswordBtn = document.getElementById("modifypassword"); //修改密码按钮
-
-				//设置里面修改密码
-				window.addEventListener('changePasswords', function() {
-					console.log('111111');
-					document.getElementById('cancelBtn').style.display = 'none';
-					back.style.display = 'inline-block';
-					unickName0.style.display = 'none';
-					//个人信息
-					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-					//如果有昵称，则不显示
-					if (personal.ispw == 1) {//有密码
-						oldPassword.style.display = 'block';
-					}else{
-						oldPassword.style.display = 'none';
-					}
-					password0div.style.display = 'block';
-					password1div.style.display = 'block';
-					tempFlag = 1;
-					navTitle.innerHTML = '修改密码';
-					modifypasswordBtn.innerHTML = '修改密码';
-					clearData();
-				});
-				//设置里面退出时设置密码
-				window.addEventListener('settingPW', function() {
-					back.style.display = 'inline-block';
-					tempFlag = 3;
-					navTitle.innerHTML = '设置密码';
-					unickName.style.display = 'block';
-					oldPassword.style.display = 'none';
-					document.getElementById('cancelBtn').style.display = 'none';
-					modifypasswordBtn.innerHTML = '设置密码';
-					//个人信息
-					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-					//如果有昵称，则不显示
-					if (personal.unick.length>0) {
-						unickName0.style.display = 'none';
-					}else{
-						unickName0.style.display = 'block';
-					}
-					console.log('333333');
-					clearData();
-				});
-
-				//从验证码界面登录或者注册时
-				window.addEventListener('registerPW', function() {
+				
+				var curPage = plus.webview.currentWebview();
+				phoneNum = curPage.data;
+				if (phoneNum== 0) {//设置里面退出时设置密码
 					back.style.display = 'none';
 					tempFlag = 2;
 					navTitle.innerHTML = '设置密码';
@@ -152,7 +116,100 @@
 					modifypasswordBtn.innerHTML = '完成';
 					console.log('22222');
 					clearData();
-				});
+				} else if(phoneNum== 1){//设置里面修改密码
+					console.log('111111');
+					document.getElementById('cancelBtn').style.display = 'none';
+					back.style.display = 'inline-block';
+					unickName0.style.display = 'none';
+					//个人信息
+					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+					//如果有昵称，则不显示
+					if(personal.ispw == 1) { //有密码
+						oldPassword.style.display = 'block';
+					} else {
+						oldPassword.style.display = 'none';
+					}
+					password0div.style.display = 'block';
+					password1div.style.display = 'block';
+					tempFlag = 1;
+					navTitle.innerHTML = '修改密码';
+					modifypasswordBtn.innerHTML = '修改密码';
+					clearData();
+				}else if(phoneNum== 2){//设置里面退出时设置密码
+					back.style.display = 'inline-block';
+					tempFlag = 3;
+					navTitle.innerHTML = '设置密码';
+					unickName.style.display = 'block';
+					oldPassword.style.display = 'none';
+					document.getElementById('cancelBtn').style.display = 'none';
+					modifypasswordBtn.innerHTML = '设置密码';
+					//个人信息
+					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+					//如果有昵称，则不显示
+					if(personal.unick.length > 0) {
+						unickName0.style.display = 'none';
+					} else {
+						unickName0.style.display = 'block';
+					}
+					console.log('333333');
+					clearData();
+				}
+
+				//设置里面修改密码
+//				window.addEventListener('changePasswords', function() {
+//					console.log('111111');
+//					document.getElementById('cancelBtn').style.display = 'none';
+//					back.style.display = 'inline-block';
+//					unickName0.style.display = 'none';
+//					//个人信息
+//					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+//					//如果有昵称，则不显示
+//					if(personal.ispw == 1) { //有密码
+//						oldPassword.style.display = 'block';
+//					} else {
+//						oldPassword.style.display = 'none';
+//					}
+//					password0div.style.display = 'block';
+//					password1div.style.display = 'block';
+//					tempFlag = 1;
+//					navTitle.innerHTML = '修改密码';
+//					modifypasswordBtn.innerHTML = '修改密码';
+//					clearData();
+//				});
+				//设置里面退出时设置密码
+//				window.addEventListener('settingPW', function() {
+//					back.style.display = 'inline-block';
+//					tempFlag = 3;
+//					navTitle.innerHTML = '设置密码';
+//					unickName.style.display = 'block';
+//					oldPassword.style.display = 'none';
+//					document.getElementById('cancelBtn').style.display = 'none';
+//					modifypasswordBtn.innerHTML = '设置密码';
+//					//个人信息
+//					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+//					//如果有昵称，则不显示
+//					if(personal.unick.length > 0) {
+//						unickName0.style.display = 'none';
+//					} else {
+//						unickName0.style.display = 'block';
+//					}
+//					console.log('333333');
+//					clearData();
+//				});
+
+				//从验证码界面登录或者注册时
+//				window.addEventListener('registerPW', function() {
+//					back.style.display = 'none';
+//					tempFlag = 2;
+//					navTitle.innerHTML = '设置密码';
+//					unickName0.style.display = 'block';
+//					unickName.style.display = 'block';
+//					oldPassword.style.display = 'none';
+//					document.getElementById('cancelBtn').style.display = 'inline-block';
+//					modifypasswordBtn.innerHTML = '完成';
+//					console.log('22222');
+//					clearData();
+//				});
 				//上级传值如果是1，是修改密码
 				//				if(curPage.data&&curPage.data==1){
 				//					oldPassword.style.display='block';
@@ -175,10 +232,22 @@
 							mui.toast('请输入原密码');
 							return;
 						}
-					} else { //设置密码
+					} else if(tempFlag == 2) { //从验证码界面登录或者注册时
 						if(unickName.value.length == 0) {
 							mui.toast('请输入昵称');
 							return;
+						}
+					} else if(tempFlag == 3) { //设置里面退出时设置密码
+						//个人信息
+						var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+						//如果有昵称，则不显示
+						if(personal.unick.length > 0) {
+
+						} else {
+							if(unickName.value.length == 0) {
+								mui.toast('请输入昵称');
+								return;
+							}
 						}
 					}
 					if(!newpw0) {
@@ -193,7 +262,7 @@
 						mui.toast('请确认新密码');
 						return;
 					}
-					if (phoneNumber.value == newpw0) {
+					if(phoneNumber.value == newpw0) {
 						mui.toast('新密码不能和原密码相同');
 						return;
 					}
@@ -317,6 +386,7 @@
 				});
 				//取消按钮
 				events.addTap('cancelBtn', function() {
+					console.log('点击取消按钮');
 					events.openNewWindowWithData('../index/index.html', '');
 				});
 			});
