--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -50,10 +50,11 @@
 //					mui.toast('此功能暂未开放');
 //				});
 				//修改密码
-				events.preload('../register/modify_password.html');
+//				events.preload('../register/modify_password.html');
 				events.addTap('change-passwords', function() {
-						events.fireToPageNone('../register/modify_password.html', 'changePasswords');
-						plus.webview.getWebviewById('modify_password.html').show()
+//						events.fireToPageNone('../register/modify_password.html', 'changePasswords');
+//						plus.webview.getWebviewById('modify_password.html').show();
+						events.openNewWindowWithData('../register/modify_password.html', '1');
 //						events.openNewWindowWithData('QRCode.html');
 //						events.openNewWindowWithData('ReadQRCode.html');
 					})
@@ -97,15 +98,16 @@
 											events.logOff();
 //											plus.runtime.quit();
 											//跳转到登录界面
-											events.openNewWindowWithData('../../html/register/login.html', '');
+//											events.openNewWindowWithData('../../html/register/login.html', '');
+											events.openNewWindowWithData('login.html', '');
 										} else {
 											mui.toast(data.RspTxt);
 										}
 									});
 
 								} else { //无密码
-									events.fireToPageNone('../register/modify_password.html', 'settingPW');
-									events.openNewWindowWithData('modify_password.html', '');
+//									events.fireToPageNone('../register/modify_password.html', 'settingPW');
+									events.openNewWindowWithData('../register/modify_password.html', '2');
 								}
 
 								break;
