设置密码问题

--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -98,8 +98,7 @@
 											events.logOff();
 //											plus.runtime.quit();
 											//跳转到登录界面
-//											events.openNewWindowWithData('../../html/register/login.html', '');
-											events.openNewWindowWithData('login.html', '');
+											events.openNewWindowWithData('../../html/register/login.html', '');
 										} else {
 											mui.toast(data.RspTxt);
 										}
