--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -90,7 +90,7 @@
 			mui.plusReady(function() {
 				var tempFlag = 0; //0我普通，1为设置修改密码，2为注册后设置密码，3为退出登录时设置密码
 				//获取当前页面
-//				var curPage = plus.webview.currentWebview();
+				//				var curPage = plus.webview.currentWebview();
 				var oldPassword = document.getElementById('old-password');
 				var navTitle = document.getElementById('navTitle');
 				var back = document.getElementById('back');
@@ -102,10 +102,10 @@
 				var password0div = document.getElementById("password000"); //新密码
 				var password1div = document.getElementById("password111"); //确认密码
 				var modifypasswordBtn = document.getElementById("modifypassword"); //修改密码按钮
-				
+
 				var curPage = plus.webview.currentWebview();
 				phoneNum = curPage.data;
-				if (phoneNum== 0) {//设置里面退出时设置密码
+				if(phoneNum == 0) { //设置里面退出时设置密码
 					back.style.display = 'none';
 					tempFlag = 2;
 					navTitle.innerHTML = '设置密码';
@@ -116,7 +116,7 @@
 					modifypasswordBtn.innerHTML = '完成';
 					console.log('22222');
 					clearData();
-				} else if(phoneNum== 1){//设置里面修改密码
+				} else if(phoneNum == 1) { //设置里面修改密码
 					console.log('111111');
 					document.getElementById('cancelBtn').style.display = 'none';
 					back.style.display = 'inline-block';
@@ -135,7 +135,7 @@
 					navTitle.innerHTML = '修改密码';
 					modifypasswordBtn.innerHTML = '修改密码';
 					clearData();
-				}else if(phoneNum== 2){//设置里面退出时设置密码
+				} else if(phoneNum == 2) { //设置里面退出时设置密码
 					back.style.display = 'inline-block';
 					tempFlag = 3;
 					navTitle.innerHTML = '设置密码';
@@ -156,60 +156,60 @@
 				}
 
 				//设置里面修改密码
-//				window.addEventListener('changePasswords', function() {
-//					console.log('111111');
-//					document.getElementById('cancelBtn').style.display = 'none';
-//					back.style.display = 'inline-block';
-//					unickName0.style.display = 'none';
-//					//个人信息
-//					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-//					//如果有昵称，则不显示
-//					if(personal.ispw == 1) { //有密码
-//						oldPassword.style.display = 'block';
-//					} else {
-//						oldPassword.style.display = 'none';
-//					}
-//					password0div.style.display = 'block';
-//					password1div.style.display = 'block';
-//					tempFlag = 1;
-//					navTitle.innerHTML = '修改密码';
-//					modifypasswordBtn.innerHTML = '修改密码';
-//					clearData();
-//				});
+				//				window.addEventListener('changePasswords', function() {
+				//					console.log('111111');
+				//					document.getElementById('cancelBtn').style.display = 'none';
+				//					back.style.display = 'inline-block';
+				//					unickName0.style.display = 'none';
+				//					//个人信息
+				//					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+				//					//如果有昵称，则不显示
+				//					if(personal.ispw == 1) { //有密码
+				//						oldPassword.style.display = 'block';
+				//					} else {
+				//						oldPassword.style.display = 'none';
+				//					}
+				//					password0div.style.display = 'block';
+				//					password1div.style.display = 'block';
+				//					tempFlag = 1;
+				//					navTitle.innerHTML = '修改密码';
+				//					modifypasswordBtn.innerHTML = '修改密码';
+				//					clearData();
+				//				});
 				//设置里面退出时设置密码
-//				window.addEventListener('settingPW', function() {
-//					back.style.display = 'inline-block';
-//					tempFlag = 3;
-//					navTitle.innerHTML = '设置密码';
-//					unickName.style.display = 'block';
-//					oldPassword.style.display = 'none';
-//					document.getElementById('cancelBtn').style.display = 'none';
-//					modifypasswordBtn.innerHTML = '设置密码';
-//					//个人信息
-//					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-//					//如果有昵称，则不显示
-//					if(personal.unick.length > 0) {
-//						unickName0.style.display = 'none';
-//					} else {
-//						unickName0.style.display = 'block';
-//					}
-//					console.log('333333');
-//					clearData();
-//				});
+				//				window.addEventListener('settingPW', function() {
+				//					back.style.display = 'inline-block';
+				//					tempFlag = 3;
+				//					navTitle.innerHTML = '设置密码';
+				//					unickName.style.display = 'block';
+				//					oldPassword.style.display = 'none';
+				//					document.getElementById('cancelBtn').style.display = 'none';
+				//					modifypasswordBtn.innerHTML = '设置密码';
+				//					//个人信息
+				//					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+				//					//如果有昵称，则不显示
+				//					if(personal.unick.length > 0) {
+				//						unickName0.style.display = 'none';
+				//					} else {
+				//						unickName0.style.display = 'block';
+				//					}
+				//					console.log('333333');
+				//					clearData();
+				//				});
 
 				//从验证码界面登录或者注册时
-//				window.addEventListener('registerPW', function() {
-//					back.style.display = 'none';
-//					tempFlag = 2;
-//					navTitle.innerHTML = '设置密码';
-//					unickName0.style.display = 'block';
-//					unickName.style.display = 'block';
-//					oldPassword.style.display = 'none';
-//					document.getElementById('cancelBtn').style.display = 'inline-block';
-//					modifypasswordBtn.innerHTML = '完成';
-//					console.log('22222');
-//					clearData();
-//				});
+				//				window.addEventListener('registerPW', function() {
+				//					back.style.display = 'none';
+				//					tempFlag = 2;
+				//					navTitle.innerHTML = '设置密码';
+				//					unickName0.style.display = 'block';
+				//					unickName.style.display = 'block';
+				//					oldPassword.style.display = 'none';
+				//					document.getElementById('cancelBtn').style.display = 'inline-block';
+				//					modifypasswordBtn.innerHTML = '完成';
+				//					console.log('22222');
+				//					clearData();
+				//				});
 				//上级传值如果是1，是修改密码
 				//				if(curPage.data&&curPage.data==1){
 				//					oldPassword.style.display='block';
@@ -228,9 +228,14 @@
 					var phoneNumber = document.getElementById("phoneNumber");
 					var unickName = document.getElementById("unickName");
 					if(tempFlag == 1) { //修改密码
-						if(phoneNumber.value.length == 0) {
-							mui.toast('请输入原密码');
-							return;
+						//个人信息
+						var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+						//如果有昵称，则不显示
+						if(personal.ispw == 1) { //有密码
+							if(phoneNumber.value.length == 0) {
+								mui.toast('请输入原密码');
+								return;
+							}
 						}
 					} else if(tempFlag == 2) { //从验证码界面登录或者注册时
 						if(unickName.value.length == 0) {
