--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -223,6 +223,7 @@
 				//				}
 				//点击修改密码方法
 				events.addTap('modifypassword', function() {
+					document.activeElement.blur();
 					var newpw0 = document.getElementById("password0").value;
 					var newpw1 = document.getElementById("password1").value;
 					var phoneNumber = document.getElementById("phoneNumber");
@@ -391,6 +392,7 @@
 				});
 				//取消按钮
 				events.addTap('cancelBtn', function() {
+					document.activeElement.blur();
 					console.log('点击取消按钮');
 					events.openNewWindowWithData('../index/index.html', '');
 				});
