--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -209,7 +209,7 @@ none; margin-top: -15px;">登录</button>
 		<script>
 			(function($, doc) {
 				mui.init({
-					//statusBarBackground: '#13b7f6'
+					statusBarBackground: '#13b7f6'
 				});
 				$.plusReady(function() {
 					//---设置沉浸式---start---
