--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -27,15 +27,15 @@
 			.mui-table-view-cell:after {
 				height: 0px;
 			}
-
+			
 			.mui-table-view {
 				/*background-color: white;*/
 			}
-
+			
 			.cloud-item {
 				background-color: white;
 			}
-
+			
 			.cloud-item-left {
 				width: 16%;
 				border-right: 1px solid #D9D9D9;
@@ -44,47 +44,47 @@
 				font-weight: bold;
 				font-size: 1.6rem;
 			}
-
+			
 			.cloud-item-right {
 				/*margin-left: 16%;*/
 				width: 84%;
 				float: right;
 			}
-
+			
 			#cloudstorage_0,
 			#cloudrecord_0,
 			#cloudapps_0 {
 				/*每一项的第一行*/
 				/*background-color: red;*/
 			}
-
+			
 			#cloudstorage_1,
 			#cloudrecord_1,
 			#cloudapps_1 {
 				/*每一项的第二行*/
 				/*background-color: blue;*/
 			}
-
+			
 			.mui-plus-pullrefresh .mui-scroll {
 				position: absolute;
 				/*width: 100%;*/
 			}
-
+			
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 				color: black;
 				border: none;
 			}
-
+			
 			.mui-table-view-cell {
 				display: inline-block;
 				width: auto;
 				padding: 1px 1px;
 			}
-
+			
 			.mui-slider-indicator .mui-table-view-cell.mui-active {
 				background: white;
 			}
-
+			
 			.cloud-red-point {
 				position: absolute;
 				background: red;
@@ -93,27 +93,27 @@
 				border-radius: 50%;
 				display: none;
 			}
-
+			
 			img {
 				border-radius: 50%;
 			}
-
+			
 			#cloudstorage_1 img {
 				border-radius: 0px;
 			}
-
+			
 			.icon-jiaxiabiao {
 				color: #0ABAF5;
 			}
-
+			
 			.icon-banxiabiao {
 				color: #FFBA00;
 			}
-
+			
 			.icon-re {
 				color: #FD681E;
 			}
-
+			
 			.icon-re,
 			.icon-banxiabiao,
 			.icon-jiaxiabiao {
@@ -121,7 +121,7 @@
 				border: none !important;
 				top: 0px;
 			}
-
+			
 			.mui-popup-input input {
 				/*popup 输入框*/
 				height: 34px;
@@ -345,10 +345,11 @@
 				if(mui.os.android) {
 					androidHeight = plus.android.invoke(plus.android.currentWebview(), "getHeight");
 				}
+
 				//防止 父页面选项卡被输入法撑起
-				window.addEventListener('resize', function() {
-					console.log('resize getStyle ' + JSON.stringify(self.getStyle()));
-					if(mui.os.android) {
+				if(mui.os.android) {
+					window.addEventListener('resize', function() {
+						console.log('resize getStyle ' + JSON.stringify(self.getStyle()));
 						console.log('androidHeight ' + androidHeight);
 						var a = plus.android.invoke(plus.android.currentWebview(), "getHeight"); //webview高度
 						var b = plus.navigator.getStatusbarHeight(); //状态栏高度
@@ -365,8 +366,15 @@
 								bottom: '50px'
 							});
 						}
+
+					}, false);
+				} else{
+					console.log("resize0011222");
+					window.onresize = function() {
+						console.log("resize001111");
+						
 					}
-				}, false);
+				}
 				//-----------设置数据end-----------------
 
 				//-----------设置监听start---------------
